--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,4 @@ version: 1.0.0
 author: Terpz710
 api: 5.0.0
 main: Terpz710\LumberJack\Loader
+description: Add in Lumberjack features to your server!
